<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout_category"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/s"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/statusBar"
    android:orientation="vertical"
    android:weightSum="100">

    <include layout="@layout/toolbar" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/mainBackground">

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/mainQuestion"
            android:textAlignment="center"
            android:textColor="@color/white" />
<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/text"
            android:background="@color/mainBackground">

            <RelativeLayout
                android:id="@+id/smokeRelative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="false"
                android:layout_marginLeft="43dp"
                android:layout_marginTop="59dp">

                <ImageButton
                    android:id="@+id/smokeButton"
                    android:layout_width="@dimen/buttonCircle"
                    android:layout_height="@dimen/buttonCircle"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/round_button_red"
                    app:srcCompat="@mipmap/hookah_02" />

                <TextView
                    android:id="@+id/smokeCount"
                    android:layout_width="@dimen/counterCircle"
                    android:layout_height="@dimen/counterCircle"
                    android:layout_alignTop="@+id/smokeButton"
                    android:layout_gravity="center"
                    android:layout_marginLeft="-25dp"
                    android:layout_marginTop="0dp"
                    android:layout_toRightOf="@+id/smokeButton"
                    android:background="@drawable/red_counter"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/white"
                    android:textSize="@dimen/redCounterTextSize" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/smokeButton"
                    android:layout_centerHorizontal="true"
                    android:text="Покурить"
                    android:textColor="@color/white"
                    android:textSize="14dp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/drinkRelative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="43dp"
                android:layout_marginTop="11dp">

                <ImageButton
                    android:id="@+id/drinkButton"
                    android:layout_width="132dp"
                    android:layout_height="132dp"
                    android:background="@drawable/round_button_purple"
                    app:srcCompat="@mipmap/drink_02" />

                <TextView
                    android:id="@+id/drinkCount"
                    android:layout_width="@dimen/counterCircle"

                    android:layout_height="@dimen/counterCircle"
                    android:layout_alignEnd="@+id/drinkButton"
                    android:layout_gravity="center"
                    android:layout_marginRight="2dp"
                    android:layout_marginTop="2dp"
                    android:background="@drawable/red_counter"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/white"
                    android:textSize="@dimen/redCounterTextSize" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/drinkButton"
                    android:layout_centerHorizontal="true"
                    android:text="Выпить"
                    android:textColor="@color/white"
                    android:textSize="14dp" />

            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/eatRelative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/smokeRelative"
                android:layout_marginLeft="21dp"
                android:layout_marginTop="25dp">

                <ImageButton
                    android:id="@+id/eatButton"
                    android:layout_width="154dp"
                    android:layout_height="154dp"
                    android:background="@drawable/round_button_orange"
                    app:srcCompat="@mipmap/eat_02" />

                <TextView
                    android:id="@+id/eatCount"
                    android:layout_width="@dimen/counterCircle"
                    android:layout_height="@dimen/counterCircle"
                    android:layout_alignEnd="@+id/eatButton"
                    android:layout_marginRight="7dp"
                    android:layout_marginTop="7dp"
                    android:background="@drawable/red_counter"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/white"
                    android:textSize="@dimen/redCounterTextSize" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/eatButton"
                    android:layout_centerHorizontal="true"
                    android:text="Покушать"
                    android:textColor="@color/white"
                    android:textSize="14dp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/movieRelative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/drinkRelative"
                android:layout_marginRight="43dp"
                android:layout_marginTop="25dp">


                <ImageButton
                    android:id="@+id/movieButton"
                    android:layout_width="@dimen/buttonCircle"
                    android:layout_height="@dimen/buttonCircle"
                    android:background="@drawable/round_button_violet"
                    app:srcCompat="@mipmap/movie_02" />

                <TextView
                    android:id="@+id/movieCount"
                    android:layout_width="@dimen/counterCircle"
                    android:layout_height="@dimen/counterCircle"
                    android:layout_alignEnd="@+id/movieButton"
                    android:layout_gravity="center"
                    android:layout_marginLeft="-25dp"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/red_counter"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/white"
                    android:textSize="@dimen/redCounterTextSize" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/movieButton"
                    android:layout_centerHorizontal="true"
                    android:text="Сходить в кино"
                    android:textColor="@color/white"
                    android:textSize="14dp" />
            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/gameRelative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/movieRelative"
                android:layout_marginRight="90dp"
                android:layout_marginTop="15dp">

                <ImageButton
                    android:id="@+id/gameButton"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/round_button_purple"
                    app:srcCompat="@mipmap/games_03" />

                <TextView
                    android:id="@+id/gameCount"
                    android:layout_width="@dimen/counterCircle"
                    android:layout_height="@dimen/counterCircle"
                    android:layout_alignEnd="@+id/gameButton"
                    android:layout_gravity="center"
                    android:layout_marginLeft="-25dp"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/red_counter"
                    android:gravity="center"
                    android:text="0"
                    android:textColor="@color/white"
                    android:textSize="@dimen/redCounterTextSize" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/gameButton"
                    android:layout_centerHorizontal="true"
                    android:text="Развлечения"
                    android:textColor="@color/white"
                    android:textSize="14dp" />
            </RelativeLayout>

        </RelativeLayout>
</ScrollView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="false"
            android:layout_weight="20"
            android:orientation="horizontal">

            <Button
                android:id="@+id/category_show_all_actions"
                android:layout_width="match_parent"
                android:layout_height="@dimen/mainCategoryBottomBarHeight"
                android:layout_weight="1"
                android:background="@color/statusBar"
                android:text="@string/bottomShowAll"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/mainCategoryBottomBarTextSize" />

            <Button
                android:id="@+id/category_show_near_actions"
                android:layout_width="match_parent"
                android:layout_height="@dimen/mainCategoryBottomBarHeight"
                android:layout_weight="1"
                android:background="@color/statusBar"
                android:text="@string/bottomNearest"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/mainCategoryBottomBarTextSize" />

        </LinearLayout>
    </RelativeLayout>


</LinearLayout>
   <include
        android:id="@+id/navigation_view"
       layout="@layout/navigation_view"/>
    </android.support.v4.widget.DrawerLayout>
